# ssproxy

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  package-check.yml  tests.yml
proxy/: __init__.py  __main__.py  config.py  logging_utils.py  proxy_handler.py  server.py
src/ssproxy/: __init__.py  __main__.py  acl.py  config.py  logging_utils.py  server.py  ssproxy_handler.py
tests/: conftest.py  test_acl.py  test_proxy.py
