[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssproxy"
version = "0.1.0.1"
description = "A simple, chainable HTTP proxy with multithreading support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["ssproxy[dev,test,lint]"]

[project.scripts]
ssproxy = "src.ssproxy.__main__:main"

[project.urls]
Homepage = "https://github.com/example/ssproxy"
Repository = "https://github.com/example/ssproxy"
Issues = "https://github.com/example/ssproxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ssproxy"]

[tool.hatch.build.targets.sdist]
include = ["src/proxy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "ARG"]
"src/ssproxy/__init__.py" = []
"src/ssproxy/config.py" = []
"src/ssproxy/logging_utils.py" = []
"src/ssproxy/ssproxy_handler.py" = ["ARG002"]
"src/ssproxy/server.py" = []
"src/ssproxy/__main__.py" = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true